--- a/DForm/DForm.csproj
+++ b/DForm/DForm.csproj
@@ -60,6 +60,8 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Data.Linq" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AnswerBase.cs" />
