--- a/DForm.Tests/DForm.Tests.csproj
+++ b/DForm.Tests/DForm.Tests.csproj
@@ -56,6 +56,8 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data.Entity.Design" />
+    <Reference Include="System.XML" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Tests.cs" />
