--- a/DForm/DForm.csproj
+++ b/DForm/DForm.csproj
@@ -78,19 +78,19 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AnswerBase.cs" />
-    <Compile Include="BooleanQuestion.cs" />
-    <Compile Include="CivilStatus.cs" />
-    <Compile Include="CompositeQuestion.cs" />
-    <Compile Include="Form.cs" />
-    <Compile Include="FormAnswer.cs" />
-    <Compile Include="ITitle.cs" />
-    <Compile Include="BooleanAnswer.cs" />
-    <Compile Include="OpenAnswer.cs" />
-    <Compile Include="OpenQuestion.cs" />
-    <Compile Include="QuestionBase.cs" />
-    <Compile Include="Questions.cs" />
-    <Compile Include="TypeExtensions.cs" />
+    <Compile Include="Models\Answers\AnswerBase.cs" />
+    <Compile Include="Models\Answers\BooleanAnswer.cs" />
+    <Compile Include="Models\Answers\FormAnswer.cs" />
+    <Compile Include="Models\Answers\OpenAnswer.cs" />
+    <Compile Include="Models\Form.cs" />
+    <Compile Include="Models\ITitle.cs" />
+    <Compile Include="Models\Questions\BooleanQuestion.cs" />
+    <Compile Include="Models\Questions\CivilStatus.cs" />
+    <Compile Include="Models\Questions\CompositeQuestion.cs" />
+    <Compile Include="Models\Questions\OpenQuestion.cs" />
+    <Compile Include="Models\Questions\QuestionBase.cs" />
+    <Compile Include="Models\Questions\Questions.cs" />
+    <Compile Include="Models\TypeExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
@@ -112,6 +112,7 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
